// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home.js - All data is available. displays today's weather and news data. 1`] = `
<div
  data-testid="weather-container"
  class="weather-container"
>
  <div
    class="text-right"
  >
    <p
      class="sol display-4"
    >
      Sol 
      1234
    </p>
    <p
      class="h2 text-muted"
    >
      Jun
      30
    </p>
    <button
      data-testid="info"
      class="openModalBtn h2 text-primary"
      aria-label="Open for more information"
    >
      <svg
        stroke="currentColor"
        fill="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        height="1em"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 56C145.72 56 56 145.72 56 256s89.72 200 200 200 200-89.72 200-200S366.28 56 256 56zm0 82a26 26 0 11-26 26 26 26 0 0126-26zm64 226H200v-32h44v-88h-32v-32h64v120h44z"
        />
      </svg>
    </button>
  </div>
  <div
    class="divider"
  />
  <div
    class="col"
  >
    <p
      data-testid="temperature"
      class="h5 mt-3"
    >
      High: 
      -12°C
    </p>
    <p
      data-testid="temperature"
      class="h5"
    >
      Low: 
      -34°C
    </p>
    <p
      data-testid="windSpeed"
    >
      Wind Speed: 
      40km/h
    </p>
    <p
      data-testid="windDirection"
    >
      Wind Direction: 
      West kph
    </p>
  </div>
  <div
    class="col text-right"
  >
    <p
      class="h5 mt-3"
    >
      Sunny
    </p>
    <p>
      Autumn
    </p>
    <p>
      UV Index: 
      Moderate
    </p>
    <p>
      Sunrise: 
      01:23
    </p>
    <p>
      Sunset: 
      12:34
    </p>
  </div>
</div>
`;

exports[`Home.js - All data is available. displays today's weather and news data. 2`] = `
<article
  data-testid="news-container"
  class="news-container"
>
  <img
    class="news-image"
    src="https://mars.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/03390/opgs/edr/fcam/FLB_698438687EDR_F0932080FHAZ00302M_.JPG"
    alt="Article 0"
  />
  <div
    class="news-desc"
  >
    <h6
      class="font-weight-bold"
    >
      News title
    </h6>
    <time
      class="font-italic"
      datetime="2033-06-30"
    >
      2033-06-30
    </time>
    <p>
      News description.
    </p>
  </div>
</article>
`;

exports[`Home.js - Buttons displays a modal explaining each piece of weather infomation. 1`] = `
<div
  data-testid="modal"
>
  <div
    class="filler"
  />
  <button
    data-testid="closeModalBtn"
    class="closeModalBtn"
  >
    Close
  </button>
  <p
    class="mt-3"
  >
    <span
      class="font-weight-bold"
    >
      NASA’s InSight Mars lander takes continuous weather measurements (temperature, wind, pressure) on the surface of Mars at Elysium Planitia, a flat, smooth plain near Mars’ equator. Please note that there are sometimes problems with the sensors on Mars that result in missing data!
    </span>
    : 
  </p>
  <p
    class="mt-3"
  >
    <span
      class="font-weight-bold"
    >
      Atmosphere Opacity
    </span>
    : 
    Weather on Mars is more extreme than Earth's. Mars is cooler and with bigger differences between day and night temperatures. Moreover, dust storms lash its surface. However, Mars' and Earth's climates have important similarities, such as the polar ice caps or seasonal changes.As on Earth, on Mars we can have sunny, cloudy or windy days, for example.
  </p>
  <p
    class="mt-3"
  >
    <span
      class="font-weight-bold"
    >
      Season
    </span>
    : 
    A Martian year is divided in 12 months, as Earth's. However, Martian months are from 46 to 67 sols (Martian days) long. The longest one is the month 3 (67 sols), and the shortest one is the month 9 (46 sols) Martian months mark seasonal changes. In the southern hemisphere (Curiosity rover location) the autumn starts in month 1; the winter in month 4; the spring in month 7; and the summer in month 10.
  </p>
  <p
    class="mt-3"
  >
    <span
      class="font-weight-bold"
    >
      Sol
    </span>
    : 
    The term sol is used to refer to the duration of a day on Mars.A sol is about 24 hours and 40 minutes.For Curiosity, sol 0 corresponds with its landing day on Mars.
  </p>
  <p
    class="mt-3"
  >
    <span
      class="font-weight-bold"
    >
      Sunrise
    </span>
    : 
    The duration of daylight varies along the Martian year, as on Earth.
  </p>
  <p
    class="mt-3"
  >
    <span
      class="font-weight-bold"
    >
      Temperature
    </span>
    : 
    Mars is farther from the Sun than Earth, it makes that Mars is colder than our planet.Moreover, Martian's atmosphere, which is extremely tenuous, does not retain the heat; hence the difference between day and night's temperatures is more pronounced than in our planet.
  </p>
  <p
    class="mt-3"
  >
    <span
      class="font-weight-bold"
    >
      Terrestrial Date
    </span>
    : 
    One day on Earth is about 24 hours, while a sol(Martian day) is about 24 hours and 40 minutes.So one single sol starts during one Earth day and finishes during the next Earth day.This is the Earth day on current sol at midday.
  </p>
  <p
    class="mt-3"
  >
    <span
      class="font-weight-bold"
    >
      UV Index
    </span>
    : 
    Local ultraviolet(UV) irradiance index is an indicator of the intensity of the ultraviolet tradiation from the Sun at Curiosity location.UV radiation is a damaging agent for life.On Earth, ozone layer prevents damaging ultraviolet light from reaching the surface, to the benefit of both plants and animals.However, on Mars, due to the absence of ozone in the tatmosphere, ultraviolet radiation reaches the Martian surface.
  </p>
  <p
    class="mt-3"
  >
    <span
      class="font-weight-bold"
    >
      Wind
    </span>
    : 
    NASA Viking landers and NASA Pathfinder rover showed that the average wind speed on their location was pretty weak
  </p>
</div>
`;

exports[`Home.js - Buttons returns to main page after clicking close modal. 1`] = `
<main
  data-testid="home-container"
  class="home-container"
>
  <p />
  <div
    class="home-left"
  >
    <section
      data-testid="weather-section"
      class="section weather-section"
    >
      <h1
        class="header"
      >
        LATEST WEATHER AT ELYSIUM PLANTITIA
      </h1>
      <div
        class="unit"
      >
        <label
          for="cel"
          class="label h5"
        >
          °C
        </label>
        <input
          type="radio"
          id="cel"
          name="unit"
          readonly=""
          checked=""
        />
        <button
          data-testid="unit-toggle"
          class="unit-toggle"
          aria-label="Toggle unit"
        />
        <label
          for="fah"
          class="label h5"
        >
          °F
        </label>
        <input
          type="radio"
          id="fah"
          name="unit"
          readonly=""
        />
      </div>
      <div
        data-testid="weather-container"
        class="weather-container"
      >
        <div
          class="text-right"
        >
          <p
            class="sol display-4"
          >
            Sol 
            1234
          </p>
          <p
            class="h2 text-muted"
          >
            Jun
            30
          </p>
          <button
            data-testid="info"
            class="openModalBtn h2 text-primary"
            aria-label="Open for more information"
          >
            <svg
              stroke="currentColor"
              fill="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              height="1em"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 56C145.72 56 56 145.72 56 256s89.72 200 200 200 200-89.72 200-200S366.28 56 256 56zm0 82a26 26 0 11-26 26 26 26 0 0126-26zm64 226H200v-32h44v-88h-32v-32h64v120h44z"
              />
            </svg>
          </button>
        </div>
        <div
          class="divider"
        />
        <div
          class="col"
        >
          <p
            data-testid="temperature"
            class="h5 mt-3"
          >
            High: 
            -12°C
          </p>
          <p
            data-testid="temperature"
            class="h5"
          >
            Low: 
            -34°C
          </p>
          <p
            data-testid="windSpeed"
          >
            Wind Speed: 
            40km/h
          </p>
          <p
            data-testid="windDirection"
          >
            Wind Direction: 
            West kph
          </p>
        </div>
        <div
          class="col text-right"
        >
          <p
            class="h5 mt-3"
          >
            Sunny
          </p>
          <p>
            Autumn
          </p>
          <p>
            UV Index: 
            Moderate
          </p>
          <p>
            Sunrise: 
            01:23
          </p>
          <p>
            Sunset: 
            12:34
          </p>
        </div>
      </div>
    </section>
    <section
      class="section image-section"
    >
      <h1
        class="header"
      >
        <p>
          LATEST IMAGES CAPTURED BY
        </p>
        <p>
          CURIOSITY ROVER
        </p>
      </h1>
      <div>
        <div
          style="z-index: 2;"
          class="carousel slide"
        >
          <ol
            class="carousel-indicators"
          >
            <li
              class="active"
            />
            <li />
            <li />
            <li />
            <li />
            <li />
            <li />
          </ol>
          <div
            class="carousel-inner"
          >
            <div
              interval="2000"
              class="active carousel-item"
            >
              <figure>
                <a
                  target="_blank"
                  rel="noopener noreferrer"
                  href="https://mars.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/03390/opgs/edr/fcam/FLB_698438687EDR_F0932080FHAZ00302M_.JPG"
                >
                  <img
                    data-testid="image"
                    class="w-100 h-100"
                    src="https://mars.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/03390/opgs/edr/fcam/FLB_698438687EDR_F0932080FHAZ00302M_.JPG"
                    alt="Mars captured by Curiosity rover's Front Hazard Avoidance Camera"
                  />
                </a>
                <div
                  class="carousel-caption"
                >
                  <button
                    class="heartBtn"
                    aria-label="Toggle like"
                  >
                    <svg
                      stroke="currentColor"
                      fill="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      data-testid="unlike-button"
                      height="1em"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M256 448a32 32 0 01-18-5.57c-78.59-53.35-112.62-89.93-131.39-112.8-40-48.75-59.15-98.8-58.61-153C48.63 114.52 98.46 64 159.08 64c44.08 0 74.61 24.83 92.39 45.51a6 6 0 009.06 0C278.31 88.81 308.84 64 352.92 64c60.62 0 110.45 50.52 111.08 112.64.54 54.21-18.63 104.26-58.61 153-18.77 22.87-52.8 59.45-131.39 112.8a32 32 0 01-18 5.56z"
                      />
                    </svg>
                  </button>
                  <figcaption
                    class="slide-caption"
                  >
                    Front Hazard Avoidance Camera
                  </figcaption>
                </div>
              </figure>
            </div>
            <div
              interval="2000"
              class="carousel-item"
            >
              <figure>
                <a
                  target="_blank"
                  rel="noopener noreferrer"
                  href="https://mars.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/03390/opgs/edr/fcam/FLB_698438687EDR_F0932080FHAZ00302M_.JPG"
                >
                  <img
                    data-testid="image"
                    class="w-100 h-100"
                    src="https://mars.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/03390/opgs/edr/fcam/FLB_698438687EDR_F0932080FHAZ00302M_.JPG"
                    alt="Mars captured by Curiosity rover's Front Hazard Avoidance Camera"
                  />
                </a>
                <div
                  class="carousel-caption"
                >
                  <button
                    class="heartBtn"
                    aria-label="Toggle like"
                  >
                    <svg
                      stroke="currentColor"
                      fill="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      data-testid="unlike-button"
                      height="1em"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M256 448a32 32 0 01-18-5.57c-78.59-53.35-112.62-89.93-131.39-112.8-40-48.75-59.15-98.8-58.61-153C48.63 114.52 98.46 64 159.08 64c44.08 0 74.61 24.83 92.39 45.51a6 6 0 009.06 0C278.31 88.81 308.84 64 352.92 64c60.62 0 110.45 50.52 111.08 112.64.54 54.21-18.63 104.26-58.61 153-18.77 22.87-52.8 59.45-131.39 112.8a32 32 0 01-18 5.56z"
                      />
                    </svg>
                  </button>
                  <figcaption
                    class="slide-caption"
                  >
                    Front Hazard Avoidance Camera
                  </figcaption>
                </div>
              </figure>
            </div>
            <div
              interval="2000"
              class="carousel-item"
            >
              <figure>
                <a
                  target="_blank"
                  rel="noopener noreferrer"
                  href="https://mars.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/03390/opgs/edr/fcam/FLB_698438687EDR_F0932080FHAZ00302M_.JPG"
                >
                  <img
                    data-testid="image"
                    class="w-100 h-100"
                    src="https://mars.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/03390/opgs/edr/fcam/FLB_698438687EDR_F0932080FHAZ00302M_.JPG"
                    alt="Mars captured by Curiosity rover's Front Hazard Avoidance Camera"
                  />
                </a>
                <div
                  class="carousel-caption"
                >
                  <button
                    class="heartBtn"
                    aria-label="Toggle like"
                  >
                    <svg
                      stroke="currentColor"
                      fill="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      data-testid="unlike-button"
                      height="1em"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M256 448a32 32 0 01-18-5.57c-78.59-53.35-112.62-89.93-131.39-112.8-40-48.75-59.15-98.8-58.61-153C48.63 114.52 98.46 64 159.08 64c44.08 0 74.61 24.83 92.39 45.51a6 6 0 009.06 0C278.31 88.81 308.84 64 352.92 64c60.62 0 110.45 50.52 111.08 112.64.54 54.21-18.63 104.26-58.61 153-18.77 22.87-52.8 59.45-131.39 112.8a32 32 0 01-18 5.56z"
                      />
                    </svg>
                  </button>
                  <figcaption
                    class="slide-caption"
                  >
                    Front Hazard Avoidance Camera
                  </figcaption>
                </div>
              </figure>
            </div>
            <div
              interval="2000"
              class="carousel-item"
            >
              <figure>
                <a
                  target="_blank"
                  rel="noopener noreferrer"
                  href="https://mars.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/03390/opgs/edr/fcam/FLB_698438687EDR_F0932080FHAZ00302M_.JPG"
                >
                  <img
                    data-testid="image"
                    class="w-100 h-100"
                    src="https://mars.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/03390/opgs/edr/fcam/FLB_698438687EDR_F0932080FHAZ00302M_.JPG"
                    alt="Mars captured by Curiosity rover's Front Hazard Avoidance Camera"
                  />
                </a>
                <div
                  class="carousel-caption"
                >
                  <button
                    class="heartBtn"
                    aria-label="Toggle like"
                  >
                    <svg
                      stroke="currentColor"
                      fill="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      data-testid="unlike-button"
                      height="1em"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M256 448a32 32 0 01-18-5.57c-78.59-53.35-112.62-89.93-131.39-112.8-40-48.75-59.15-98.8-58.61-153C48.63 114.52 98.46 64 159.08 64c44.08 0 74.61 24.83 92.39 45.51a6 6 0 009.06 0C278.31 88.81 308.84 64 352.92 64c60.62 0 110.45 50.52 111.08 112.64.54 54.21-18.63 104.26-58.61 153-18.77 22.87-52.8 59.45-131.39 112.8a32 32 0 01-18 5.56z"
                      />
                    </svg>
                  </button>
                  <figcaption
                    class="slide-caption"
                  >
                    Front Hazard Avoidance Camera
                  </figcaption>
                </div>
              </figure>
            </div>
            <div
              interval="2000"
              class="carousel-item"
            >
              <figure>
                <a
                  target="_blank"
                  rel="noopener noreferrer"
                  href="https://mars.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/03390/opgs/edr/fcam/FLB_698438687EDR_F0932080FHAZ00302M_.JPG"
                >
                  <img
                    data-testid="image"
                    class="w-100 h-100"
                    src="https://mars.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/03390/opgs/edr/fcam/FLB_698438687EDR_F0932080FHAZ00302M_.JPG"
                    alt="Mars captured by Curiosity rover's Front Hazard Avoidance Camera"
                  />
                </a>
                <div
                  class="carousel-caption"
                >
                  <button
                    class="heartBtn"
                    aria-label="Toggle like"
                  >
                    <svg
                      stroke="currentColor"
                      fill="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      data-testid="unlike-button"
                      height="1em"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M256 448a32 32 0 01-18-5.57c-78.59-53.35-112.62-89.93-131.39-112.8-40-48.75-59.15-98.8-58.61-153C48.63 114.52 98.46 64 159.08 64c44.08 0 74.61 24.83 92.39 45.51a6 6 0 009.06 0C278.31 88.81 308.84 64 352.92 64c60.62 0 110.45 50.52 111.08 112.64.54 54.21-18.63 104.26-58.61 153-18.77 22.87-52.8 59.45-131.39 112.8a32 32 0 01-18 5.56z"
                      />
                    </svg>
                  </button>
                  <figcaption
                    class="slide-caption"
                  >
                    Front Hazard Avoidance Camera
                  </figcaption>
                </div>
              </figure>
            </div>
            <div
              interval="2000"
              class="carousel-item"
            >
              <figure>
                <a
                  target="_blank"
                  rel="noopener noreferrer"
                  href="https://mars.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/03390/opgs/edr/fcam/FLB_698438687EDR_F0932080FHAZ00302M_.JPG"
                >
                  <img
                    data-testid="image"
                    class="w-100 h-100"
                    src="https://mars.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/03390/opgs/edr/fcam/FLB_698438687EDR_F0932080FHAZ00302M_.JPG"
                    alt="Mars captured by Curiosity rover's Front Hazard Avoidance Camera"
                  />
                </a>
                <div
                  class="carousel-caption"
                >
                  <button
                    class="heartBtn"
                    aria-label="Toggle like"
                  >
                    <svg
                      stroke="currentColor"
                      fill="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      data-testid="unlike-button"
                      height="1em"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M256 448a32 32 0 01-18-5.57c-78.59-53.35-112.62-89.93-131.39-112.8-40-48.75-59.15-98.8-58.61-153C48.63 114.52 98.46 64 159.08 64c44.08 0 74.61 24.83 92.39 45.51a6 6 0 009.06 0C278.31 88.81 308.84 64 352.92 64c60.62 0 110.45 50.52 111.08 112.64.54 54.21-18.63 104.26-58.61 153-18.77 22.87-52.8 59.45-131.39 112.8a32 32 0 01-18 5.56z"
                      />
                    </svg>
                  </button>
                  <figcaption
                    class="slide-caption"
                  >
                    Front Hazard Avoidance Camera
                  </figcaption>
                </div>
              </figure>
            </div>
            <div
              interval="2000"
              class="carousel-item"
            >
              <figure>
                <a
                  target="_blank"
                  rel="noopener noreferrer"
                  href="https://mars.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/03390/opgs/edr/fcam/FLB_698438687EDR_F0932080FHAZ00302M_.JPG"
                >
                  <img
                    data-testid="image"
                    class="w-100 h-100"
                    src="https://mars.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/03390/opgs/edr/fcam/FLB_698438687EDR_F0932080FHAZ00302M_.JPG"
                    alt="Mars captured by Curiosity rover's Front Hazard Avoidance Camera"
                  />
                </a>
                <div
                  class="carousel-caption"
                >
                  <button
                    class="heartBtn"
                    aria-label="Toggle like"
                  >
                    <svg
                      stroke="currentColor"
                      fill="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      data-testid="unlike-button"
                      height="1em"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M256 448a32 32 0 01-18-5.57c-78.59-53.35-112.62-89.93-131.39-112.8-40-48.75-59.15-98.8-58.61-153C48.63 114.52 98.46 64 159.08 64c44.08 0 74.61 24.83 92.39 45.51a6 6 0 009.06 0C278.31 88.81 308.84 64 352.92 64c60.62 0 110.45 50.52 111.08 112.64.54 54.21-18.63 104.26-58.61 153-18.77 22.87-52.8 59.45-131.39 112.8a32 32 0 01-18 5.56z"
                      />
                    </svg>
                  </button>
                  <figcaption
                    class="slide-caption"
                  >
                    Front Hazard Avoidance Camera
                  </figcaption>
                </div>
              </figure>
            </div>
          </div>
          <a
            class="carousel-control-prev"
            role="button"
            href="#"
          >
            <span
              aria-hidden="true"
              class="carousel-control-prev-icon"
            />
            <span
              class="sr-only"
            >
              Previous
            </span>
          </a>
          <a
            class="carousel-control-next"
            role="button"
            href="#"
          >
            <span
              aria-hidden="true"
              class="carousel-control-next-icon"
            />
            <span
              class="sr-only"
            >
              Next
            </span>
          </a>
        </div>
        <button
          data-testid="undo-button"
          class="btn btn-dark border border-light popupBox "
          aria-label="Undo deleted image"
        >
          Click to Undo
        </button>
      </div>
      <time
        data-testid="image-date"
        class="h5 mt-3"
        datetime="2033-06-30"
      >
        (
        2033-06-30
        )
      </time>
    </section>
  </div>
  <div
    class="home-right"
  >
    <section
      class="section news-section"
    >
      <h1
        class="header"
      >
        FEBRUARY
        NEWS
      </h1>
      <a
        class="news-link"
        href="https://www.newsurl.com"
      >
        <article
          data-testid="news-container"
          class="news-container"
        >
          <img
            class="news-image"
            src="https://mars.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/03390/opgs/edr/fcam/FLB_698438687EDR_F0932080FHAZ00302M_.JPG"
            alt="Article 0"
          />
          <div
            class="news-desc"
          >
            <h6
              class="font-weight-bold"
            >
              News title
            </h6>
            <time
              class="font-italic"
              datetime="2033-06-30"
            >
              2033-06-30
            </time>
            <p>
              News description.
            </p>
          </div>
        </article>
      </a>
    </section>
  </div>
</main>
`;

exports[`Home.js - Buttons toggles from celcius to farenheit. 1`] = `
Array [
  <p
    data-testid="temperature"
    class="h5 mt-3"
>
    High: 
    10.40°F
</p>,
  <p
    data-testid="temperature"
    class="h5"
>
    Low: 
    -29.20°F
</p>,
]
`;

exports[`Home.js - Buttons toggles from farenheit to celcius. 1`] = `
Array [
  <p
    data-testid="temperature"
    class="h5 mt-3"
>
    High: 
    -12°C
</p>,
  <p
    data-testid="temperature"
    class="h5"
>
    Low: 
    -34°C
</p>,
]
`;
